<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_column="0"
    android:layout_margin="10dp"
    android:layout_row="2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_notification" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume_control" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_ToggleVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mute" />


        <Button
            android:id="@+id/button_DownVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/down_volume" />

        <Button
            android:id="@+id/button_UpVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/up_volume" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/proressBar_Volume"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="264dp"
        android:layout_height="30dp" />
</LinearLayout>