<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tzengshinfu.volumecontrol.MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/volume_control"
        app:layout_constraintStart_toStartOf="@+id/checkBox_Enable"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_Enable" />

    <CheckBox
        android:id="@+id/checkBox_Enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/enable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_VolumePercent"
        android:layout_width="27dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="   "
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="%"
        app:layout_constraintStart_toEndOf="@+id/textView_VolumePercent"
        app:layout_constraintTop_toTopOf="@+id/textView_VolumePercent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/show_notification_bar_when_detect_sound"
        app:layout_constraintStart_toEndOf="@+id/checkBox_Enable"
        app:layout_constraintTop_toTopOf="@+id/checkBox_Enable" />

    <Button
        android:id="@+id/button_ToggleVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:text="@string/mute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button_DownVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down_volume"
        app:layout_constraintStart_toEndOf="@+id/button_ToggleVolume"
        app:layout_constraintTop_toTopOf="@+id/button_ToggleVolume" />

    <Button
        android:id="@+id/button_UpVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up_volume"
        app:layout_constraintStart_toEndOf="@+id/button_DownVolume"
        app:layout_constraintTop_toTopOf="@+id/button_DownVolume" />

    <ProgressBar
        android:id="@+id/progressBar_Volume"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="260dp"
        android:layout_height="24dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_DownVolume" />

</android.support.constraint.ConstraintLayout>
